--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Landing Page</title>
-    <link rel="icon" href="iconnugget.png" type="image/x-icon">
+    <link rel="icon" href="nugget-removebg-preview.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&family=Nunito:wght@300;400;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
+
 
     <style>
         body {
@@ -78,6 +79,8 @@
             margin-bottom: 20px;
         }
 
+
+
         .profileCard h4 {
             color: #133E87;
             font-family: 'Montserrat', sans-serif;
@@ -139,7 +142,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand navbar-brand-custom" href="#">
-                <img src="iconnugget.png" alt="Logo"
+                <img src="nugget-removebg-preview.png" alt="Logo"
                     style="width: 45px; height: 45px; margin-right: 10px;">
                 MariaRi ChickenNuggets
             </a>
@@ -177,14 +180,14 @@
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <h4 class="sectionTitle">About Me</h4>
-                    <p>Hi! I'm Maria, an IT student passionate about web design, memes, and creative problem-solving. I
-                        love
-                        creating engaging web experiences and exploring new design trends. When I'm not coding, you can
-                        find me
-                        laughing at memes or experimenting with graphic design.</p>
+                    <p>Hi! I'm Maria, an IT student passionate about web design, memes, and creating problems I do not
+                        know how to solve! I
+                        love creating engaging web experiences and exploring new design trends. When I'm not coding, you
+                        can
+                        find me laughing at memes or experimenting with graphic design.</p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="gunther.png" alt="Maria's Picture" class="img-fluid rounded"
+                    <img src="frog_about.png" alt="Maria's Picture" class="img-fluid rounded"
                         style="max-width: 100%; height: auto;">
                 </div>
             </div>
@@ -192,12 +195,21 @@
 
         <div class="profileCard">
             <h4 class="sectionTitle">Fun Facts About Me</h4>
-            <ul>
-                <li><span class="funFactEmoji">🍗</span> I believe chicken nuggets are the ultimate comfort food.</li>
-                <li><span class="funFactEmoji">🎨</span> Sometimes, I try to paint, but it usually ends up as abstract
-                    art.</li>
-                <li><span class="funFactEmoji">😄</span> My meme collection is rivaled only by my coding errors.</li>
-            </ul>
+            <div class="row align-items-center">
+                <div class="col-md-4 text-center">
+                    <img src="gunther.png" alt="Fun Facts Image" class="img-fluid rounded">
+                </div>
+                <div class="col-md-8">
+                    <ul>
+                        <li><span class="funFactEmoji">🍗</span> I believe chicken nuggets are the ultimate comfort
+                            food.</li>
+                        <li><span class="funFactEmoji">🎨</span> Sometimes, I try to paint, but it usually ends up as
+                            abstract art.</li>
+                        <li><span class="funFactEmoji">😄</span> My meme collection is rivaled only by my coding errors.
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
         <div class="profileCard">
@@ -232,8 +244,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="index.html" target="_blank"
-                        class="activityBtn">
+                    <a href="index.html" target="_blank" class="activityBtn">
                         Activity 3
                     </a>
                 </div>
@@ -244,7 +255,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
     <div class="container my-5">
@@ -302,11 +312,11 @@
         <div class="container" style="margin: 0; padding: 0;">
             <p>Made with ❤️ by Maria Jessica Laurel</p>
             <p>
-                <a href="mailto:mariajessica@example.com" style="color: #CBDCEB; text-decoration: none;"><i
+                <a href="mailto:mariajessicalaurel@gmail.com" style="color: #CBDCEB; text-decoration: none;"><i
                         class="bi bi-envelope"></i> Email</a> |
                 <a href="https://github.com/mariari-chickennuggets" target="_blank"
                     style="color: #CBDCEB; text-decoration: none;"><i class="bi bi-github"></i> GitHub</a> |
-                <a href="https://www.linkedin.com/in/mariajessica" target="_blank"
+                <a href="https://www.linkedin.com/in/mariajessicalaurel" target="_blank"
                     style="color: #CBDCEB; text-decoration: none;"><i class="bi bi-linkedin"></i> LinkedIn</a>
             </p>
         </div>
@@ -314,7 +324,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s">
-    </script>
+        </script>
 
 </body>
 
