--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="kurzgesagt/index.html" target="_blank" class="activityBtn">
+            <a href="Kurzgesagt/index.html" target="_blank" class="activityBtn">
               Kurzgesagt
             </a>
           </div>
