--- a/kurzgesagt/index.html
+++ b/kurzgesagt/index.html
@@ -90,13 +90,14 @@
           <iframe
             width="100%"
             height="200"
-            src="https://www.youtube.com/embed/[MostLikedVideoID]"
+            src="https://www.youtube.com/embed/_27eD49ePQE"
             frameborder="0"
             allowfullscreen
           ></iframe>
-          <h3 class="video-title">Most Liked</h3>
-          <p>A short description of the most liked video.</p>
+          <h3 class="video-title">Kurzgesagt Channel Trailer</h3>
+          <p>Well. A channel trailer. Also fan finder video.</p>
         </div>
+        
         <div class="col-md-4 animate-on-scroll">
           <iframe
             width="100%"
@@ -106,7 +107,7 @@
             allowfullscreen
           ></iframe>
           <h3 class="video-title">Most Viewed</h3>
-          <p>A short description of the most viewed video.</p>
+          <p>annaanan</p>
         </div>
         <div class="col-md-4 animate-on-scroll">
           <iframe
