--- a/mp1/index.html
+++ b/mp1/index.html
@@ -42,6 +42,29 @@
     </style>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">Kurzgesagt</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#videos">Videos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#playlist">Playlist</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
   </body>
 </html>
