--- a/mp1/index.html
+++ b/mp1/index.html
@@ -99,6 +99,181 @@
       </div>
     </section>
 
+    <section id="playlist" class="container my-5 text-center">
+      <h2 class="mb-4 animate__animated animate__fadeIn">Explore Playlists</h2>
+      <div id="playlistCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner" id="carouselContent"></div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#playlistCarousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#playlistCarousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
 
+    <script>
+      const playlists = [
+        {
+          title: "1",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "2",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "3",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "4",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "5",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "6",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "7",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "8",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "9",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "10",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "11",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "12",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "13",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "14",
+          description: "",
+          img: "",
+          link: "",
+        },
+        {
+          title: "15",
+          description: "",
+          img: "",
+          link: "",
+        },
+      ];
+
+      const carouselContent = document.getElementById("carouselContent");
+      const itemsPerSlide = 3;
+      let carouselHTML = "";
+
+      playlists.forEach((playlist, index) => {
+        if (index % itemsPerSlide === 0) {
+          if (index === 0) {
+            carouselHTML += `<div class="carousel-item active"><div class="row">`;
+          } else {
+            carouselHTML += `<div class="carousel-item"><div class="row">`;
+          }
+        }
+
+        carouselHTML += `
+        <div class="col-md-4">
+          <div class="card bg-dark text-white">
+            <img src="${playlist.img}" class="card-img-top" alt="${playlist.title} Thumbnail">
+            <div class="card-body">
+              <h5 class="card-title">${playlist.title}</h5>
+              <p class="card-text">${playlist.description}</p>
+              <a href="${playlist.link}" class="btn btn-warning btn-sm">Watch Now</a>
+            </div>
+          </div>
+        </div>
+      `;
+
+        if (
+          (index + 1) % itemsPerSlide === 0 ||
+          index === playlists.length - 1
+        ) {
+          carouselHTML += `</div></div>`;
+        }
+      });
+
+      carouselContent.innerHTML = carouselHTML;
+    </script>
+
+    <footer>
+      <p>Designed with admiration for Kurzgesagt – In a Nutshell.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      const elements = document.querySelectorAll(".animate-on-scroll");
+
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add("visible");
+          }
+        });
+      });
+
+      elements.forEach((element) => {
+        observer.observe(element);
+      });
+    </script>
   </body>
 </html>
